--- a/BCEdit180/Editor/Controls/Bytecode/EditorControls/InstructionEditorStyles.xaml
+++ b/BCEdit180/Editor/Controls/Bytecode/EditorControls/InstructionEditorStyles.xaml
@@ -122,8 +122,8 @@
                         <TextBlock Width="100" HorizontalAlignment="Left" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="5"  FontWeight="Bold" Margin="0,26,0,0"><Run Text="Branch "/><Run Text="Target"/></TextBlock>
                         <TextBlock Width="100" HorizontalAlignment="Left" TextWrapping="NoWrap" Text="Byte Offset" VerticalAlignment="Top" Padding="5"  FontWeight="Bold" Margin="0,52,0,0"/>
                         <TextBox Foreground="{StaticResource ConstEnum}" Text="{Binding Opcode, UpdateSourceTrigger=PropertyChanged}" Background="Transparent" HorizontalAlignment="Stretch" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="5" Margin="100,0,0,0" BorderThickness="0"  FontWeight="Bold" FontStyle="Italic" />
-                        <TextBlock Foreground="{StaticResource Keyword}" Text="{Binding TargetLabel.Index, UpdateSourceTrigger=PropertyChanged}" Background="Transparent" HorizontalAlignment="Stretch" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="5" Margin="100,26,150,0" FontWeight="Bold" FontStyle="Italic" />
-                        <TextBlock Foreground="{StaticResource ConstNumeric}" Text="{Binding JumpOffset, UpdateSourceTrigger=PropertyChanged}" Background="Transparent" HorizontalAlignment="Stretch" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="5" Margin="100,52,0,0" FontWeight="Bold" FontStyle="Italic" />
+                        <TextBlock Foreground="{StaticResource Keyword}" Text="{Binding TargetLabel.Index}" Background="Transparent" HorizontalAlignment="Stretch" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="5" Margin="100,26,150,0" FontWeight="Bold" FontStyle="Italic" />
+                        <TextBlock Foreground="{StaticResource ConstNumeric}" Text="{Binding JumpOffset}" Background="Transparent" HorizontalAlignment="Stretch" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="5" Margin="100,52,0,0" FontWeight="Bold" FontStyle="Italic" />
                         <Button Command="{Binding EditTargetLabelCommand}" Content="Edit Target Label" ToolTip="Opens a window, which lets you select a new target label" HorizontalAlignment="Right" VerticalAlignment="Top" Padding="5" Margin="0,25,0,0" Width="150"/>
                     </Grid>
                 </ControlTemplate>
@@ -150,7 +150,7 @@
                         <TextBlock Width="100" HorizontalAlignment="Left" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="5"  FontWeight="Bold" Text="Opcode"/>
                         <TextBlock Width="100" HorizontalAlignment="Left" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="5"  FontWeight="Bold" Margin="0,26,0,0" Text="Value"/>
                         <TextBox Foreground="{StaticResource ConstEnum}" Text="{Binding Opcode, UpdateSourceTrigger=PropertyChanged}" Background="Transparent" HorizontalAlignment="Stretch" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="5" Margin="100,0,0,0" BorderThickness="0"  FontWeight="Bold" FontStyle="Italic" />
-                        <TextBox Foreground="{StaticResource ConstNumeric}" Text="{Binding Value, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding IsEditable, UpdateSourceTrigger=PropertyChanged}" Background="Transparent" HorizontalAlignment="Stretch" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="5" Margin="100,26,150,0" BorderThickness="0"  FontWeight="Bold" FontStyle="Italic" />
+                        <TextBox Foreground="{StaticResource ConstNumeric}" Text="{Binding Value, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding IsEditable}" Background="Transparent" HorizontalAlignment="Stretch" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="5" Margin="100,26,150,0" BorderThickness="0"  FontWeight="Bold" FontStyle="Italic" />
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
