--- a/BCEdit180/Editor/Controls/Bytecode/Viewers/ViewerStyles.xaml
+++ b/BCEdit180/Editor/Controls/Bytecode/Viewers/ViewerStyles.xaml
@@ -38,14 +38,14 @@
                     <Grid d:DataContext="{d:DesignInstance descriptors:TypeDescViewModel}">
                         <Label Margin="0,0,100,0" MinHeight="26" VerticalContentAlignment="Center" BorderThickness="0" Padding="5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                             <TextBlock Foreground="{StaticResource FieldDescriptor}"
-                                       Text="{Binding TypeDescriptor, UpdateSourceTrigger=PropertyChanged, Converter={x:Static converters:TypeDescriptorToStringConverter.Instance}}"
+                                       Text="{Binding TypeDescriptor, Converter={x:Static converters:TypeDescriptorToStringConverter.Instance}}"
                                        Background="Transparent"
                                        TextWrapping="NoWrap"
                                        FontWeight="Bold"
                                        FontFamily="Consolas"
                                        FontStyle="Italic"/>
                         </Label>
-                        <Button Command="{Binding EditFieldDescriptorCommand, UpdateSourceTrigger=PropertyChanged}" Content="Edit Descriptor" HorizontalAlignment="Right" Width="100"/>
+                        <Button Command="{Binding EditFieldDescriptorCommand}" Content="Edit Descriptor" HorizontalAlignment="Right" Width="100"/>
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
@@ -68,7 +68,7 @@
                                  FontWeight="Bold"
                                  FontFamily="Consolas"
                                  FontStyle="Italic" Margin="0,0,100,0" MinHeight="26"/>
-                        <Button IsEnabled="False" Command="{Binding EditHandleCommand, UpdateSourceTrigger=PropertyChanged}" Content="Edit Handle" HorizontalAlignment="Right" Width="100"/>
+                        <Button IsEnabled="False" Command="{Binding EditHandleCommand}" Content="Edit Handle" HorizontalAlignment="Right" Width="100"/>
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
