--- a/BCEdit180/Views/Message/MessageWindow.xaml
+++ b/BCEdit180/Views/Message/MessageWindow.xaml
@@ -28,7 +28,7 @@
         <Border DockPanel.Dock="Bottom" VerticalAlignment="Bottom" x:Name="ButtonBarBorder" Padding="10,0" Background="{DynamicResource ABrush.Tone4.Background.Static}">
             <DockPanel>
                 <ItemsControl DockPanel.Dock="Left" VerticalAlignment="Center" Margin="0,0,10,0" Padding="0,5">
-                    <CheckBox IsEnabled="{Binding ShowAlwaysUseNextResultOption, Mode=OneWay}" IsChecked="{Binding IsAlwaysUseThisOptionChecked, UpdateSourceTrigger=PropertyChanged}" Margin="0,0,0,2">
+                    <CheckBox IsEnabled="{Binding ShowAlwaysUseNextResultOption, Mode=OneWay}" IsChecked="{Binding IsAlwaysUseThisOptionChecked}" Margin="0,0,0,2">
                         <TextBlock TextWrapping="Wrap" Text="Always use this option" TextAlignment="Center" />
                     </CheckBox>
                     <!--
@@ -40,7 +40,7 @@
                         </MultiBinding>
                     </CheckBox.Visibility>
                     -->
-                    <CheckBox Content="Current queue only" IsChecked="{Binding IsAlwaysUseThisOptionForCurrentQueueChecked, UpdateSourceTrigger=PropertyChanged}" Margin="0,2,0,0">
+                    <CheckBox Content="Current queue only" IsChecked="{Binding IsAlwaysUseThisOptionForCurrentQueueChecked}" Margin="0,2,0,0">
                         <CheckBox.IsEnabled>
                             <MultiBinding Converter="{StaticResource BoolAND}">
                                 <Binding Path="ShowAlwaysUseNextResultOption" />
@@ -62,7 +62,7 @@
                     </ItemsControl.ItemsPanel>
                     <ItemsControl.Resources>
                         <DataTemplate DataType="{x:Type message1:DialogButton}">
-                            <Button Content="{Binding Text, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}"
+                            <Button Content="{Binding Text, Mode=OneWay}"
                                     Command="{Binding Command, Mode=OneTime}"
                                     ToolTip="{Binding ToolTip, Mode=OneWay}"
                                     HorizontalAlignment="Center" VerticalAlignment="Stretch"
