--- a/BCEdit180/Themes/Controls.xaml
+++ b/BCEdit180/Themes/Controls.xaml
@@ -4,7 +4,8 @@
                     xmlns:themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2"
                     xmlns:ap="clr-namespace:BCEdit180.Themes.Attached"
                     xmlns:views="clr-namespace:BCEdit180.Views"
-                    xmlns:ap2="clr-namespace:BCEdit180.AttachedProperties">
+                    xmlns:ap2="clr-namespace:BCEdit180.AttachedProperties"
+                    xmlns:controls="clr-namespace:BCEdit180.Controls">
     <Style x:Key="FocusVisual">
         <Setter Property="Control.Template">
             <Setter.Value>
@@ -4331,9 +4332,19 @@
                         <ItemsPresenter x:Name="ItemsHost" Grid.ColumnSpan="2" Grid.Column="1" Grid.Row="1" Margin="0"/>
                     </Grid>
                     <ControlTemplate.Triggers>
-                        <Trigger Property="IsExpanded" Value="false">
+                        <Trigger Property="IsExpanded" Value="False">
                             <Setter Property="Visibility" TargetName="ItemsHost" Value="Collapsed" />
                         </Trigger>
+                        <MultiTrigger>
+                            <MultiTrigger.Conditions>
+                                <Condition Property="HasItems" Value="False"/>
+                                <Condition Property="controls:TreeExtension.IsInitiallyExpandable" Value="False"/>
+                            </MultiTrigger.Conditions>
+                            <Setter Property="Visibility" TargetName="Expander" Value="Hidden" />
+                            <Setter Property="Visibility" TargetName="HorLn" Value="Visible" />
+                            <Setter Property="Grid.RowSpan" TargetName="VerLn" Value="2" />
+                            <Setter Property="Grid.Row" TargetName="VerLn" Value="0" />
+                        </MultiTrigger>
                         <MultiTrigger>
                             <MultiTrigger.Conditions>
                                 <Condition Property="IsExpanded" Value="False"/>
@@ -4341,12 +4352,6 @@
                             </MultiTrigger.Conditions>
                             <Setter Property="Visibility" TargetName="VerLn" Value="Collapsed"/>
                         </MultiTrigger>
-                        <Trigger Property="HasItems" Value="false">
-                            <Setter Property="Visibility" TargetName="Expander" Value="Hidden" />
-                            <Setter Property="Visibility" TargetName="HorLn" Value="Visible" />
-                            <Setter Property="Grid.RowSpan" TargetName="VerLn" Value="2" />
-                            <Setter Property="Grid.Row" TargetName="VerLn" Value="0" />
-                        </Trigger>
                         <Trigger Property="HasItems" Value="true">
                             <Setter Property="Visibility" TargetName="Expander" Value="Visible" />
                             <Setter Property="Visibility" TargetName="HorLn" Value="Hidden" />
